Fixes z-index that caused TableContainer contents to overlap the section toolbar

--- a/src/components/main/Section/Section.scss
+++ b/src/components/main/Section/Section.scss
@@ -11,7 +11,7 @@
   position: fixed;
   right: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   flex-shrink: 0;
 }
 
